tests/errors/sem.type-mismatch.fficall-arg.or
main :: () -> void {
    @fficall "asdasd.a", "decl", void, "something", 5;
    @fficall "asdasd.a", "decl", void, "something", true;
};
